--- a/views/register.ejs
+++ b/views/register.ejs
@@ -103,7 +103,7 @@
 <body>
     <div class="registration-form">
         <h2>Registration Form</h2>
-        <form action="/auth/register" method="POST">
+        <form action="/auth/register" method="POST" enctype="multipart/form-data">
             <input type="text" name="name" placeholder="Name" required>
             <input type="email" name="email" placeholder="Email address" required>
             
