Error solved by senior developer

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -119,11 +119,11 @@
         <h3>Login Here</h3>
         <div class="input-group">
             <i class="fas fa-envelope icon"></i>
-            <input type="email" name="email" placeholder=" Your email..." required>
+            <input type="email" name="email" placeholder=" Your email..." >
         </div>
         <div class="input-group">
             <i class="fas fa-lock icon"></i>
-            <input type="password" name="password"placeholder="Password"  required>
+            <input type="password" name="password"placeholder="Password"  >
         </div>
         <button type="submit">Login</button>
         <a href="../register">Create Account</a>
