fix(auth): bcrypt password hashmatching

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -114,7 +114,7 @@
 </head>
 <body>
     <div class="container">
-        <form action="auth/login" method="POST">
+        <form action="/auth/login" method="POST">
         <center><i class="fas fa-user user-icon" id="avatar"></i></center>
         <h3>Login Here</h3>
         <div class="input-group">
